--- a/src/main/resources/fxml/tracklib.fxml
+++ b/src/main/resources/fxml/tracklib.fxml
@@ -27,7 +27,7 @@
       <center>
         <VBox prefHeight="200.0" prefWidth="100.0">
           <children>
-            <SplitPane dividerPositions="0.3897795591182365" focusTraversable="true" prefHeight="646.0" prefWidth="1000.0" VBox.vgrow="ALWAYS">
+            <SplitPane dividerPositions="0.3346693386773547" focusTraversable="true" prefHeight="646.0" prefWidth="1000.0" VBox.vgrow="ALWAYS">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                   <children>
@@ -36,15 +36,42 @@
                     <Button layoutX="112.0" layoutY="396.0" mnemonicParsing="false" onAction="#removeAction" text="Remove" />
                   </children>
                 </AnchorPane>
-                <AnchorPane id="AnchorPane" prefHeight="875.0" prefWidth="597.0">
-                  <children>
-                    <TrackPane fx:id="trackPane" prefHeight="644.0" prefWidth="647.0" AnchorPane.bottomAnchor="229.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="-498.0" AnchorPane.topAnchor="1.0">
-                      <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                      </padding>
-                    </TrackPane>
-                  </children>
-                </AnchorPane>
+                <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                  <tabs>
+                    <Tab text="Track">
+                      <content>
+                        <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                          <children>
+                            <TrackPane fx:id="trackPane" prefHeight="644.0" prefWidth="1004.0" AnchorPane.bottomAnchor="98.0" AnchorPane.leftAnchor="-402.0" AnchorPane.rightAnchor="-402.0" AnchorPane.topAnchor="98.0">
+                              <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              </padding>
+                            </TrackPane>
+                          </children>
+                        </AnchorPane>
+                      </content>
+                    </Tab>
+                    <Tab text="Properties">
+                      <content>
+                        <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                          <children>
+                            <TextField fx:id="nameTextField" layoutX="122.0" layoutY="60.0" prefWidth="360.0" />
+                            <TextArea fx:id="descriptionTextArea" layoutX="122.0" layoutY="108.0" prefHeight="89.0" prefWidth="360.0" wrapText="true" />
+                            <TableView fx:id="trackTable" editable="true" layoutY="219.0" prefHeight="299.0" prefWidth="460.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="14.0">
+                              <columns>
+                                <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="156.0" text="Start" fx:id="columnStart" />
+                                <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="95.0" text="Pitch" fx:id="columnPitch" />
+                                <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="206.0" text="Duration" fx:id="columnDuration" />
+                              </columns>
+                            </TableView>
+                            <TextArea fx:id="rawTextArea" layoutY="577.0" prefHeight="110.0" prefWidth="460.0" wrapText="false" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="14.0" />
+                            <Button layoutX="220.0" layoutY="533.0" mnemonicParsing="false" onAction="#saveChangesAction" text="Save Changes" />
+                          </children>
+                        </AnchorPane>
+                      </content>
+                    </Tab>
+                  </tabs>
+                </TabPane>
               </items>
             </SplitPane>
           </children>
