--- a/src/main/resources/fxml/tracklib.fxml
+++ b/src/main/resources/fxml/tracklib.fxml
@@ -7,6 +7,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.input.*?>
 <?import javafx.scene.layout.*?>
 <?scenebuilder-classpath-element ../../../../../rockymusic/rockymusic-fx/target/classes?>
 <?scenebuilder-classpath-element ../../../../../../../../.m2/repository/org/slf4j/slf4j-api/1.7.6/slf4j-api-1.7.6.jar?>
@@ -38,34 +39,40 @@
                 </AnchorPane>
                 <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                   <tabs>
-                    <Tab text="Track">
-                      <content>
-                        <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                          <children>
-                            <TrackPane fx:id="trackPane" prefHeight="644.0" prefWidth="1004.0" AnchorPane.bottomAnchor="98.0" AnchorPane.leftAnchor="-402.0" AnchorPane.rightAnchor="-402.0" AnchorPane.topAnchor="98.0">
-                              <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                              </padding>
-                            </TrackPane>
-                          </children>
-                        </AnchorPane>
-                      </content>
-                    </Tab>
                     <Tab text="Properties">
                       <content>
                         <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                           <children>
-                            <TextField fx:id="nameTextField" layoutX="122.0" layoutY="60.0" prefWidth="360.0" />
-                            <TextArea fx:id="descriptionTextArea" layoutX="122.0" layoutY="108.0" prefHeight="89.0" prefWidth="360.0" wrapText="true" />
+                            <TextField fx:id="nameTextField" layoutX="122.0" layoutY="23.0" prefWidth="360.0" />
+                            <TextArea fx:id="descriptionTextArea" layoutX="122.0" layoutY="62.0" prefHeight="89.0" prefWidth="360.0" wrapText="true" />
                             <TableView fx:id="trackTable" editable="true" layoutY="219.0" prefHeight="299.0" prefWidth="460.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="14.0">
                               <columns>
                                 <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="156.0" text="Start" fx:id="columnStart" />
                                 <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="95.0" text="Pitch" fx:id="columnPitch" />
                                 <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="206.0" text="Duration" fx:id="columnDuration" />
+                                <TableColumn prefWidth="75.0" text="Channel" fx:id="columnChannel" />
                               </columns>
                             </TableView>
                             <TextArea fx:id="rawTextArea" layoutY="577.0" prefHeight="110.0" prefWidth="460.0" wrapText="false" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="14.0" />
                             <Button layoutX="220.0" layoutY="533.0" mnemonicParsing="false" onAction="#saveChangesAction" text="Save Changes" />
+                            <ComboBox fx:id="instrumentComboBox" layoutY="163.0" prefWidth="204.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="257.0" />
+                          </children>
+                        </AnchorPane>
+                      </content>
+                    </Tab>
+                    <Tab text="Track">
+                      <content>
+                        <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                          <children>
+                            <ScrollPane id="ScrollPane" prefViewportHeight="643.0" prefViewportWidth="1466.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <content>
+                                <TrackPane fx:id="trackPane" prefHeight="644.0" prefWidth="1004.0">
+                                  <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                  </padding>
+                                </TrackPane>
+                              </content>
+                            </ScrollPane>
                           </children>
                         </AnchorPane>
                       </content>
@@ -82,6 +89,11 @@
           <menus>
             <Menu mnemonicParsing="true" text="_File">
               <items>
+                <MenuItem mnemonicParsing="false" onAction="#exportTracktoMusicXML" text="Export Track to MusicXML">
+                  <accelerator>
+                    <KeyCodeCombination alt="UP" code="X" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                  </accelerator>
+                </MenuItem>
                 <MenuItem mnemonicParsing="false" onAction="#exitAction" text="Close" />
               </items>
             </Menu>
